<resources>
    <string name="app_name">DEMO 공공배달</string>
    <string name="title_order_history">주문내역</string>
    <string name="title_order_history_call">전화주문 내역</string>
    <string name="title_address_setup">배달주소 설정</string>
    <string name="title_review">리뷰관리</string>
    <string name="title_review_write">리뷰쓰기</string>
    <string name="title_my_order">마이오더</string>
    <string name="title_my_info">내 정보</string>
    <string name="title_order">주문하기</string>
    <string name="title_order_detail">주문 상세</string>
    <string name="title_payment">결제하기</string>
    <string name="title_payment_method">결제수단 선택</string>
    <string name="title_payment_history">결제주문 내역</string>
    <string name="title_notice">공지사항</string>
    <string name="title_event">이벤트</string>
    <string name="title_faq">자주 묻는 질문</string>
    <string name="title_inquiry">1:1 문의</string>
    <string name="title_inquiry_write">문의작성</string>
    <string name="title_customer_center">고객센터</string>
    <string name="title_env_setup">환경설정</string>
    <string name="sub_title_safety_shop">안심 매장</string>
    <string name="sub_title_right_shop">바른 매장</string>
    <string name="sub_title_call_shop">전화 매장</string>
    <string name="tab_title_payment_order">결제주문</string>
    <string name="tab_title_call_order">전화주문</string>
    <string name="tab_title_shop_customer">단골</string>
    <string name="tab_title_shop_share">공유하기</string>
    <string name="tab_title_shop_menu">메뉴</string>
    <string name="tab_title_shop_review">리뷰</string>
    <string name="tab_title_shop_info">정보</string>
    <string name="btn_confirm_text">확인</string>
    <string name="btn_cancel_text">취소</string>
    <string name="btn_yes_text">예</string>
    <string name="btn_no_text">아니오</string>
    <string name="btn_close_text">닫기</string>
    <string name="btn_popup_next">다음에</string>
    <string name="btn_popup_upgrade">업그레이드</string>
    <string name="btn_adult_auth">성인인증 하기</string>
    <string name="btn_popup_delivery_setup">배달주소 변경하기</string>
    <string name="btn_popup_location_setup">위치 서비스 설정</string>
    <string name="btn_start_text">시작하기</string>
    <string name="btn_full_text_view">전문보기</string>
    <string name="btn_address_setup">현재 위치로 주소 설정</string>
    <string name="btn_day_view_text">오늘 하루 보이지 않기</string>
    <string name="btn_biz_text">사업자정보확인</string>
    <string name="btn_use_terms_text">이용약관</string>
    <string name="btn_privacy_info_text">개인정보 처리방침</string>
    <string name="lbl_biz_ceo">대표이사</string>
    <string name="lbl_biz_address">주소</string>
    <string name="lbl_biz_no">사업자등록번호</string>
    <string name="lbl_biz_sales_">통신판매업신고</string>
    <string name="lbl_biz_hsp">호스팅서비스제공자</string>
    <string name="lbl_biz_inquiry">1:1 문의</string>
    <string name="lbl_biz_call_center">고객센터</string>
    <string name="txt_biz_call_center">평일 오전 9시~오후6시 (토/일/공휴일 휴무)</string>
    <string name="info_biz_call_center">* 입점, 제휴, 불편 등 각 종 문의는 아래로 연락 해주세요.</string>
    <string name="info_biz_message">공공배달은 통신판매중개자이며 통신판매의 당사자가 아닙니다.\n따라서 공공배달은 상품거래정보 및 거래에 대한 책임을 지지 않습니다.</string>
    <string name="lbl_notice">공지사항</string>
    <string name="lbl_event">이벤트</string>
    <string name="lbl_search_area">주변</string>
    <string name="lbl_search_text">검색</string>
    <string name="lbl_search_result">검색결과</string>
    <string name="lbl_recent_text">최근 검색어</string>
    <string name="lbl_near_store">주변매장</string>
    <string name="lbl_location_jibun">[지번]</string>
    <string name="hint_address_setup">건물명, 도로명, 지번으로 검색 해주세요.</string>
    <string name="hint_address_detail">상세 주소 입력 (건물명, 층, 동 / 호수 등)</string>
    <string name="hint_favorite_menu">좋아하는 메뉴를 찾아보세요!</string>
    <string name="hint_sign_in_id">아이디(이메일)</string>
    <string name="hint_sign_in_id_msg">사용하시는 이메일 주소 입력</string>
    <string name="hint_sign_in_pw">비밀번호</string>
    <string name="title_txt_search_id">아이디 찾기</string>
    <string name="title_txt_search_pw">비밀번호 찾기</string>
    <string name="title_txt_new_pw">비밀번호 변경</string>
    <string name="info_txt_new_pw">새로운 비밀번호를 생성 합니다.</string>
    <string name="info_no_info">가입 정보 없음</string>
    <string name="hint_new_pw">새로운 비밀번호</string>
    <string name="hint_new_re_pw">새로운 비밀번호 확인</string>
    <string name="btn_txt_sign_in">로그인</string>
    <string name="btn_txt_alert_sign_in">로그인하기</string>
    <string name="btn_txt_change">변경하기</string>
    <string name="btn_txt_complete_signin">완료 및 로그인하기</string>
    <string name="btn_txt_search_id">아이디 확인하기</string>
    <string name="btn_txt_search_pw">비밀번호 확인하기</string>
    <string name="alert_msg_use_sign_in">로그인 후 이용할 수 있습니다.</string>
    <string name="title_member_join">간편 회원가입</string>
    <string name="btn_txt_member_join">회원가입</string>
    <string name="hint_join_pw">6~16자 | 영문+숫자 | 특수문자 가능</string>
    <string name="hint_sign_in_pw_len">6~16자 입력</string>
    <string name="hint_sign_in_pw_msg">영문+숫자 조합 필수</string>
    <string name="hint_join_re_pw">비밀번호 확인</string>
    <string name="hint_join_re_pw_msg">비밀번호를 다시 입력</string>
    <string name="hint_join_phone">휴대폰 번호</string>
    <string name="hint_new_join_phone">새 휴대폰 번호</string>
    <string name="hint_join_auth">인증번호</string>
    <string name="btn_txt_rcv_auth">인증</string>
    <string name="btn_txt_confirm_auth">확인</string>
    <string name="btn_txt_join">동의하고 가입하기</string>
    <string name="btn_txt_re_pw">완료 및 로그인하기</string>
    <string name="txt_join_complete1">회원 가입</string>
    <string name="txt_join_complete2">이 완료 되었습니다.</string>
    <string name="lbl_sign_up_date">가입일시 : </string>
    <string name="txt_search_id_complete"><font color="#f9ac19">아이디</font>를 찾았습니다.</string>
    <string name="toast_sign_out">로그아웃 되었습니다.</string>
    <string name="toast_send_auth_no">인증번호가 발송되었습니다.</string>
    <string name="toast_withdrawal">회원 탈퇴 되었습니다.</string>
    <string name="msg_sch_pw_fail">일치하지 않는 정보 입니다</string>
    <string name="info_sch_pw_fail">입력하신 아이디(이메일)과 휴대폰 번호가\n회원가입시 등록된 정보와 일치하지 않습니다.</string>
    <string name="txt_sign_on_terms">본인은 만14세 이상이며\n공공배달 이용약관, 개인정보 수집 및 이용약관\n내용을 확인 하였으며, 동의합니다.</string>
    <string name="clickable_part_1">만14세 이상</string>
    <string name="clickable_part_2">공공배달 이용약관</string>
    <string name="clickable_part_4">개인정보 수집 및 이용약관</string>
    <string name="lbl_recent_address">최근 주소</string>
    <string name="btn_delete_all">전체삭제</string>
    <string name="btn_location_setup">이 주소로 배달해 주세요.</string>
    <string name="txt_item_order_min">최소주문</string>
    <string name="txt_view_more">더보기</string>
    <string name="title_dc_menu">할인 메뉴</string>
    <string name="title_reco_menu">추천 메뉴</string>
    <string name="title_shop_desc">공지 / 알림</string>
    <string name="title_shop_sale">영업정보</string>
    <string name="title_origin">원산지 정보</string>
    <string name="lbl_phone_no">전화번호</string>
    <string name="lbl_safety_no">안심번호</string>
    <string name="lbl_delivery_area">배달지역</string>
    <string name="lbl_delivery_min_amt">최소 주문 금액</string>
    <string name="lbl_delivery_cost">배달비</string>
    <string name="lbl_ready">준비중</string>
    <string name="lbl_pause">영업\n일시중지</string>
    <string name="txt_holiday">휴무</string>
    <string name="txt_free_amt"> 0원</string>
    <string name="txt_free_amt_above"> 이상 무료</string>
    <string name="txt_shop_call_info1">전화주문만 가능한 매장입니다.</string>
    <string name="txt_shop_call_info2">결제 주문이 가능하도록 빠르게 준비하겠습니다.</string>
    <string name="txt_shop_review_blind">서비스 정책에 의해 블라인드 처리된 리뷰 입니다.</string>
    <string name="hint_shop_search">매장이름 또는 메뉴명을 검색해주세요.</string>
    <string name="tooltip_safety_shop">조리 과정을 볼 수 있도록 CCTV가 설치된 매장 입니다. 안심하고 이용해 보세요.</string>
    <string name="tooltip_right_shop">안심매장이 될 수 있도록 노력중인 매장입니다. 안심매장의 기준이 매우 까다롭기 때문에 쉽지 않아요!</string>
    <string name="tooltip_call_shop">전화주문만 가능한 매장입니다. 결제 주문이 가능하도록 빠르게 준비하겠습니다.</string>
    <string name="shop_open_order_time">영업시간(주문가능시간)</string>
    <string name="txt_menu_soldout">일시품절</string>
    <string name="txt_menu_sell_stop">판매중지</string>
    <string name="txt_menu_order_qty">수량</string>
    <string name="txt_menu_order_amt">주문 금액</string>
    <string name="txt_menu_min_order">최소주문(</string>
    <string name="txt_menu_deli_area">배달지역</string>
    <string name="txt_menu_sailing">영업중</string>
    <string name="txt_menu_selling">판매중</string>
    <string name="btn_menu_cart_into">장바구니에 담기</string>
    <string name="btn_menu_order_into">장바구니에 담아 <font color="#f9ac19">다른 메뉴와 함께 나중에 주문</font>할 수 있습니다.</string>
    <string name="btn_menu_now_order">지금 주문하기</string>
    <string name="btn_menu_impossible_order">지금 주문하기 불가</string>
    <string name="txt_menu_select">메뉴 선택</string>
    <string name="txt_menu_select_qty">개 선택 가능</string>
    <string name="txt_menu_select_one">1개 선택 가능</string>
    <string name="toast_menu_select_message">개까지 선택 가능합니다.</string>
    <string name="lbl_cart_opt_item">추가 구성 (+)</string>
    <string name="btn_item_delete">삭제</string>
    <string name="lbl_delivery_address">배달 주소</string>
    <string name="lbl_order_requiry">요청 사항</string>
    <string name="lbl_payment_amount">결제 금액</string>
    <string name="lbl_payment_progress"> 결제 진행중</string>
    <string name="lbl_payment_complete"> 결제 완료</string>
    <string name="lbl_payment_reason">사유 : </string>
    <string name="lbl_payment_reason2">사유 : %s</string>
    <string name="lbl_agree_all">모두 동의</string>
    <string name="lbl_safety_number">안심번호 사용</string>
    <string name="lbl_disposables_reduce">일회용품, 함께 줄여 볼까요?</string>
    <string name="lbl_disposables_unuse">일회용 수저, 포크, 젓가락은 안쓸래요!</string>
    <string name="btn_order">결제하기</string>
    <string name="btn_order_complete">주문 완료</string>
    <string name="btn_order_confirm">주문내역 확인</string>
    <string name="btn_re_order_confirm">다시 결제하기</string>
    <string name="hint_order_request">주문 요청사항 입력</string>
    <string name="hint_order_request_example">예시.  덜 맵게해주시고, 당근은 빼주세요</string>
    <string name="btn_change_pay">변경</string>
    <string name="btn_all_view">전체 보기</string>
    <string name="tooltip_delivery_address">배달주소를 통해 주문 가능한 매장을
        제공합니다. 따라서, 배달주소의 변경은
        ‘홈화면’과 ‘매장목록’화면에서만
        가능합니다.</string>
    <string name="tooltip_safety_number">주문시 입력한 고객님의
        휴대폰 번호가 노출되지 않도록
        임시번호를 사용하는 서비스
        입니다. (5시간 유효)</string>
    <string name="msg_payment_info">다양한 결제수단을 준비하고 있습니다.</string>
    <string name="msg_order_complete">주문이 완료되었습니다</string>
    <string name="msg_order_fail">주문을 처리하지 못했습니다.</string>
    <string name="lbl_order_no">주문번호</string>
    <string name="lbl_order_dttm">주문일시</string>
    <string name="lbl_delivery_addr">배달주소</string>
    <string name="lbl_order_phone">전화번호</string>
    <string name="lbl_order_request">요청사항</string>
    <string name="lbl_order_title_menu">메뉴</string>
    <string name="lbl_order_title_qty">수량</string>
    <string name="lbl_order_title_amt">금액</string>
    <string name="lbl_order_tot_amt">주문금액</string>
    <string name="lbl_order_delevery_cost">배달비 (+)</string>
    <string name="lbl_order_payment_amt">결제금액</string>
    <string name="msg_user_cancel">사용자 취소</string>
    <string name="dlg_cancel_message">결제가 진행중입니다.\n취소하시겠습니까?</string>
    <string name="dlg_cancel_auth_message">인증이 진행중입니다.\n취소하시겠습니까?</string>
    <string name="info_pay_fail">고객님의 주문 시점과 최종결제 시점에\n변동사항이 발생하면 주문을 처리할 수 없습니다.</string>
    <string name="msg_pay_fail_1">1. 고객님의 확인 필요사항\n
        <font color="#f9ac19">매장 영업시간, 메뉴할인, 할인쿠폰 유효기간 등</font></string>
    <string name="msg_pay_fail_2">2. 판매자에 의한 변동사항\n
        <font color="#f9ac19">메뉴의 일시품절, 판매중지, 가격변동 등</font></string>
    <string name="msg_pay_fail_3">3. 일시적 시스템 오류</string>
    <string name="toast_add_cart">장바구니에 메뉴가 담겼습니다.</string>
    <string name="btn_cart_order">주문하기</string>
    <string name="btn_cart_non_order">주문불가</string>
    <string name="bottom_text_home">홈</string>
    <string name="bottom_text_favorite">단골매장</string>
    <string name="bottom_text_cart">장바구니</string>
    <string name="bottom_text_order_history">주문내역</string>
    <string name="bottom_text_myorder">마이오더</string>
</resources>